fixed issue of ProgressBar not being fully visible on mobile

--- a/src/components/Banner/styles.scss
+++ b/src/components/Banner/styles.scss
@@ -84,7 +84,7 @@
     flex-direction: column;
     width: 42rem;
     background-image: none;
-    margin: 3.75rem 2rem 0 2rem;
+    margin: 3rem 2rem 0 2rem;
   }
 }
 
@@ -102,6 +102,6 @@
 @media screen and (max-height: 615px) {
   .banner {
     margin: 0rem 2rem 0 2rem;
-    padding-top: 2rem;
+    padding-top: 1.5rem;
   }
 }
